--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "node-youtube-music": "^0.10.3",
     "nodemon": "^3.1.9",
     "youtube-music-api": "^1.0.6",
-    "ytdl-core": "npm:@distube/ytdl-core@^4.15.8"
+    "@distube/ytdl-core": "^4.15.8",
   }
 }
