--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
-    "node-youtube-music": "^0.10.3",
     "nodemon": "^3.1.9",
-    "youtube-music-api": "^1.0.6",
-    "@distube/ytdl-core": "^4.15.8"
+    "youtube-music-apis": "^1.0.6"
   }
 }
